Fix a medium severity issue